[package]
name = "hydroperfox-sourcetext"
version = "1.0.0"
edition = "2021"
authors = ["hydroperfox <hydroperfox@gmail.com>"]
repository = "https://github.com/hydroperfox/rustsourcetext"
keywords = ["source", "text"]
description = "Source text containing line locations."
license = "Apache-2.0"

[dependencies]
