[package]
name = "realhydroper-sourcetext"
version = "1.0.0"
edition = "2021"
authors = ["realhydroper <hydroperfox@gmail.com>"]
repository = "https://github.com/realhydroper/rustsourcetext"
keywords = ["source", "text"]
description = "Source text containing line locations."
license = "Apache-2.0"

[dependencies]
