[package]
name = "hydroperx-sourcetext"
version = "1.0.0"
edition = "2021"
authors = ["hydroperx <hydroperfox@gmail.com>"]
repository = "https://github.com/hydroperx/sourcetext.rs"
keywords = ["source", "text"]
description = "Source text containing line locations."
license = "Apache-2.0"

[dependencies]
